Edited Instagram Feed

--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
             <div class="hobby">Netflix Binge Watching</div>
             <div class="hobby">Music (90’s, classical, alternative, plus many more)</div>
           </div>
-          <!-- INSTAGRAM FEED
+          <!-- INSTAGRAM FEED -->
           <div class="box">
             <h2>Instagram Feed</h2>
-             SnapWidget
+            <!-- SnapWidget -->
             <script src="http://snapwidget.com/js/snapwidget.js"></script>
             <iframe src="http://snapwidget.com/in/?u=dGhhdG90aGVyemFjaHxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHxub3x5ZXM=&ve=060315" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
             <center>
               <a href="#" class="btn btn-primary"><i class="fa fa-instagram"></i> View on Instagram</a>
             </center>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
