--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope-o fa-fw"></span></div>
               <div class="title pull-right">Email</div>
-              <div class="description pull-right"><a href="mailto:thezacjordan{at}gmail.com">thezacjordan{at}gmail.com</a></div>
+              <div class="description pull-right"><a href="mailto:contact@zachjordan.me">contact@zachjordan.me</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
@@ -231,15 +231,5 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- SCRIPTS -->
     <script src="js/scripts.js"></script>
-    <!-- GOOGLE TRACKING CODE -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-41225594-1', 'auto');
-      ga('send', 'pageview');
-  </script>
   </body>
 </html>
