Added New Instagram Feed Widget
No more ads por moi.

--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
           <!-- INSTAGRAM FEED -->
           <div class="box">
             <h2>Instagram Feed</h2>
-            <!-- SnapWidget -->
-            <script src="http://snapwidget.com/js/snapwidget.js"></script>
-            <iframe src="http://snapwidget.com/in/?u=dGhhdG90aGVyemFjaHxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHxub3x5ZXM=&ve=060315" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
+            <!-- INSTANSIVE WIDGET -->
+            <script src="//instansive.com/widget/js/instansive.js"></script>
+            <iframe src="//instansive.com/widgets/edcc503b420131c56cdfe7510c778974b52c0c64.html" id="instansive_edcc503b42" name="instansive_edcc503b42"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
             <center>
               <a href="#" class="btn btn-primary"><i class="fa fa-instagram"></i> View on Instagram</a>
             </center>
