Updated copy, added needed meta tags.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Hello, I'm Zach and this is me.">
+    <meta name="keywords" content="copywriter, copywriting, web developer, web, podcast, centennial college, bitcoin">
+    <meta name="author" content="Zach Jordan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Zach Jordan</title>
@@ -38,7 +41,9 @@
             
             <p>I love to write and code when I have spare time. I have assisted in the development of a few mobile applications and website development projects both personal and professional. When I'm not busy with his other numerous hobbies (DIY, electronics, etc.) I'm usually somewhere deep inside the world of cryptocurrency (Bitcoin, etc.).</p>
 
-            <p>I'm a very resourceful person and I'm always trying to push the bar and discover new things both professionally and personally.</p>
+            <!-- <p>I also host a podcast when I have some spare time called "<a href="podcast.html">ADD on Air</a>" where I talk about things that are on my mind that week or an idea that I've recently become obsessed with.</p> -->
+
+            <p>Overall I'm a very resourceful person and I'm always trying to push the bar and discover new things both professionally and personally.</p>
           </div>
           <!-- LIFE STORY -->
           <div class="box">
@@ -79,6 +84,13 @@
                   <p>Graduated with an advanced diploma in advertising and marketing communications specializing in copywriting and set off into the world.</p>
                 </div>
               </li>
+              <!-- <li>
+                <div class="year pull-left">2015</div>
+                <div class="description pull-right">
+                  <h3>ADD on Air Podcast</h3>
+                  <p>Started hosting a podcast in my spare time where I talk about things that are on my mind that week or an idea that I've recently become obsessed with. <a href="podcast.html">Check out the podcast!</a></p>
+                </div>
+              </li> -->
             </ul>
           </div>
           <!-- WORK EXPERIENCES -->
@@ -206,6 +218,7 @@
             <div class="hobby">Traveling</div>
             <div class="hobby">DIY</div>
             <div class="hobby">Bitcoin</div>
+            <div class="hobby">Podcasts</div>
             <div class="hobby">Web Development</div>
             <div class="hobby">Rock Climbing</div>
             <div class="hobby">Biking</div>
