--- a/podcast.html
+++ b/podcast.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="ADD on Air: A Podcast">
+    <meta name="keywords" content="news, tech, ideas, ADD, ADHD, web, podcast, interesting, bitcoin">
+    <meta name="author" content="Zach Jordan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ADD on Air</title>
