--- a/index.html
+++ b/index.html
@@ -179,20 +179,20 @@
               <div class="title pull-right">Instagram</div>
               <div class="description pull-right"><a href="http://instagram.com/thatotherzach/" target="_blank">instagram.com/thatotherzach/</a></div>
             </div>
-            <div class="contact-item">
+            <!--<div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-github fa-fw"></span></div>
               <div class="title pull-right">Github</div>
               <div class="description pull-right"><a href="http://github.com/TXTCLASS" target="_blank">github.com/TXTCLASS</a></div>
-            </div>
+            </div>-->
           </div>
           <!-- SKILLS -->
           <div class="box">
             <h2>Skill Set</h2>
             <div class="skills">
               <div class="item-skills" data-percent="1.00">Writing &amp; Editing</div>
-              <div class="item-skills" data-percent="1.00">HTML</div>
-              <div class="item-skills" data-percent="1.00">CSS</div>
-              <div class="item-skills" data-percent="0.69">Jade</div>
+              <div class="item-skills" data-percent="1.00">HTML &amp; CSS</div>
+              <div class="item-skills" data-percent="1.00">Adobe Creative Suite (Ps, Ai, Id, Dw)</div>
+              <div class="item-skills" data-percent="0.80">Google Ad Words</div>
               <div class="item-skills" data-percent="0.60">jQuery</div>
               <div class="item-skills" data-percent="0.18">Javascript</div>
               <div class="skills-legend clearfix">
@@ -218,8 +218,9 @@
             <div class="hobby">Traveling</div>
             <div class="hobby">DIY</div>
             <div class="hobby">Bitcoin</div>
-            <div class="hobby">Podcasts</div>
             <div class="hobby">Web Development</div>
+            <div class="hobby">Graphic Design</div>
+            <div class="hobby">UI &amp; UX</div>
             <div class="hobby">Rock Climbing</div>
             <div class="hobby">Biking</div>
             <div class="hobby">Netflix Binge Watching</div>
