--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
               <div class="item-skills" data-percent="0.60">jQuery</div>
               <div class="item-skills" data-percent="0.18">Javascript</div>
               <div class="skills-legend clearfix">
-                <div class="legend-left legend">Beginner</div>
-                <div class="legend-left legend"><span>Proficient</span></div>
-                <div class="legend-right legend"><span>Expert</span></div>
-                <div class="legend-right legend">Master</div>
+                <div class="legend-left legend">Okay</div>
+                <div class="legend-left legend"><span>Knows a Bit</span></div>
+                <div class="legend-right legend"><span>Damn Decent</span></div>
+                <div class="legend-right legend">Hella Good</div>
               </div>
             </div>
           </div>
