--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-instagram fa-fw"></span></div>
               <div class="title pull-right">Instagram</div>
-              <div class="description pull-right"><a href="http://instagram.com/thatotherzach/" target="_blank">instagram.com/thatotherzach/</a></div>
+              <div class="description pull-right"><a href="http://instagram.com/thatotherzach/" target="_blank">instagram.com/thatotherzach</a></div>
             </div>
             <!--<div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-github fa-fw"></span></div>
@@ -233,7 +233,7 @@
             <script src="//instansive.com/widget/js/instansive.js"></script>
             <iframe src="//instansive.com/widgets/edcc503b420131c56cdfe7510c778974b52c0c64.html" id="instansive_edcc503b42" name="instansive_edcc503b42"  scrolling="no" allowtransparency="true" class="instansive-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
             <center>
-              <a href="#" class="btn btn-primary"><i class="fa fa-instagram"></i> View on Instagram</a>
+              <a href="http://instagram.com/thatotherzach/" class="btn btn-primary"><i class="fa fa-instagram"></i> View on Instagram</a>
             </center>
           </div>
         </div>
