--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <!-- ABOUT ME -->
           <div class="box">
             <h2>About Me</h2>
-            <p>I am a graduate of Centennial College's Advertising and Marketing Communications program, specializing in copywriting.</p>
-            
-            <p>I love to write and code when I have spare time. I have assisted in the development of a few mobile applications and website development projects both personal and professional. When I'm not busy with his other numerous hobbies (DIY, electronics, etc.) I'm usually somewhere deep inside the world of cryptocurrency (Bitcoin, etc.).</p>
+              <p>I'm a writer by trade, I love language. That love of language has led me through an advertising and marketing program at Centennial college where I developed it further to be useful in business and marketing.</p> 
 
-            <!-- <p>I also host a podcast when I have some spare time called "<a href="podcast.html">ADD on Air</a>" where I talk about things that are on my mind that week or an idea that I've recently become obsessed with.</p> -->
+              <p>Shortly after the end of the program I started doing web development and a little graphic design. I found lots of work in the realm of cryptocurrency (Bitcoin, etc.) and worked here and there doing more or less the same kind of work followed by two internships in the field of marketing and public relations at two of Toronto's award winning agencies.</p>
 
-            <p>Overall I'm a very resourceful person and I'm always trying to push the bar and discover new things both professionally and personally.</p>
+              <p>When I'm not perusing a monetary reward for my work, I'm usually browsing the internet looking for new and interesting things to learn about. From screen printing to woodworking and electronic engineering, I really enjoy finding out how to do things and find creative solutions to problems. One of the more recent ones has been learning to speak, read, and write in Esperanto; a constructed international auxiliary language that has around 2 million speakers worldwide.</p>
+
+              <p>I also maintain a small blog on <a href="https://medium.com/@thatotherzach" target="_blank">Medium</a> for those looking for a variety of topics, but usually it's just random things I want to write about.</p>
           </div>
           <!-- LIFE STORY -->
           <div class="box">
