Updated index. Section not ready for live site yet.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							<!-- end #education -->
 						</div>
 						<div class="col-md-5">
-						<!-- begin #testimonials -->
+						<!-- begin #testimonials
 							<div id="testimonials">
 								<h2 class="title">What They Say</h2>
 								<div id="carousel-container" class="owl-carousel owl-theme">
@@ -222,7 +222,7 @@
 									</div>
 								</div>
 							</div>
-							<hr>
+							<hr> -->
 							<!-- end #testimonials -->
 							<!-- begin #skills -->
 							<div id="skills">
