Contact From will not function with this setup. I Hid the form and moved the contact details in its place.

--- a/index.html
+++ b/index.html
@@ -441,11 +441,6 @@
 								<div id="cd-zoom-out"></div>
 								<address><b>Note:</b> Current location accurate to 50km<sup>2</sup></address> 
 							</section>
-							<ul class="list">
-								<li><div class="icon fa fa-map-marker"></div>Toronto, Canada</li>
-								<li><div class="icon fa fa-envelope-o"></div>thezacjordan{at}gmail.com</li>
-								<!-- <li><div class="icon fa fa-phone"></div> 4 8 15 16 23 42 </li> -->
-							</ul>
 						</div>
 
 						<div class="col-md-5">
@@ -454,7 +449,13 @@
 						    </div>
 						    <hr>
 							<h2 class="title">Contact Zach</h2>
-							<form id="contact-form" action="contact.php" method="POST">
+							<ul class="list">
+								<li><div class="icon fa fa-map-marker"></div>Toronto, Canada</li>
+								<li><div class="icon fa fa-envelope-o"></div>thezacjordan{at}gmail.com</li>
+								<!-- <li><div class="icon fa fa-phone"></div> 4 8 15 16 23 42 </li> -->
+							</ul>
+							<!-- Form Hidden For Now -->
+							<!-- <form id="contact-form" action="contact.php" method="POST">
 								<input type="text" name="subject" placeholder="Subject">
 								<input type="text" name="name" placeholder="Name">
 								<input type="email" name="email" placeholder="Email">
@@ -462,7 +463,7 @@
 								<input id="send" type="submit" value="Send Message">
 								<input type="hidden" name="submitted" value="true">
 								<div class="words contact-notification">Your message has been sent! #Winning</div>
-							</form>
+							</form> -->
 						</div>
 					</div>
 				</div>
