Attpemt to fix viewport so responsive layout will work.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary" />
