Double check of all files. Restored CSS files to orgin so maybe now it'll work.

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 						<h1 class="title">About Zach</h1>
 						<img class="blog-img" src="img/about-zach.jpg" title="This is Zach in SFO" alt="About Zach Image">
 						<div class="blog-content">
-						<center><h2 class="title">~ The Cake Was a Lie ~</h2></center>
+							<center><h2 class="title">~ The Cake Was a Lie ~</h2></center>
 							<div class="dropcap">But</div>
 							<div class="detail">
 								<p>while you're here you might as well get to know me a little better. For starters my passion for all things digital has allowed me to diversify my copywriting and marketing skills to cater specifically to the online world. I love to find creative solutions to problems whether it be a catchy headline or what content to use for a landing page.</p>
@@ -294,15 +294,6 @@
 								<br />
 								<p>Then there's my fascination with the international auxiliary language known as Esperanto. In fact, currently I'm working an Esperanto writing project called <a href="https://medium.com/kvindek-du-semajnoj-de-esperanton" target="_blank" title="Legas Kvindek Du Semajnoj de Esperanto">"Kvindek Du Semajnoj de Esperanto"</a> or "52 Weeks of Esperanto". It's exactly what it sounds like, one blog post in Esperanto each week for one year... Fun!</p>
 								<br />
-								<h2 class="title">More of Zach's Hobbies:</h2>
-							    <span class="hobby">Photography</span>
-            					<span class="hobby">Traveling</span>
-            					<span class="hobby">DIY</span>
-            					<span class="hobby">Web Dev</span>
-            					<span class="hobby">Rock Climbing</span>
-            					<span class="hobby">Biking</span>
-            					<span class="hobby">Binge Watching Netflix</span>
-            					<span class="hobby">Music (Mostly 90’s, Classical, Rock, Alternative)</span>
 							</div>
 						</div>
 						<!-- <div class="quotes">
@@ -416,7 +407,6 @@
 								</div>
 							</div>
 							<!-- end #blog-item -->
-
 						</div>
 					</div>
 				</div>
@@ -445,9 +435,8 @@
 						</div>
 
 						<div class="col-md-5">
-							<h2 class="title">Latest tweet</h2>
-							<div id="twitter">
-						    </div>
+							<h2 class="title">Latest Tweet</h2>
+							<div id="twitter"></div>
 						    <hr>
 							<h2 class="title">Contact Zach</h2>
 							<ul class="list">
