Added new Favicon.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Zach Jordan - Human</title>
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/zach-favicon.png">	
-    <title>Zach Jordan - Human</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/twitter.css">
