Title Tag Edit.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Zach Jordan - Human</title>
+	<title>This is Zach Jordan</title>
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
     <!-- Favicon -->
