Updated Twitter Fetcher to latest version.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>This is Zach Jordan</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
+    <title>This is Zach Jordan</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
