Major overhaul of the Twitter functionality. It actually works now!

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 						</div>
 
 						<div class="col-md-5">
-							<h2 class="title">Latest Tweet</h2>
+							<h2 class="title">Zach's Latest Tweet&nbsp;</h2>
 							<div id="twitter"></div>
 						    <hr>
 							<h2 class="title">Contact Zach</h2>
