Disabled "prefixfree.min.js" for now. Not sure what it did, but errors have droped now that its not running.

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 	<script src="js/vendor/morphext.min.js"></script>
 	<script src="js/vendor/twitterFetcher.min.js"></script>
 	<script src="js/smoothScrolls.js"></script>
-	<script src="js/prefixfree.min.js"></script>
+	<!--<script src="js/prefixfree.min.js"></script>-->
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/twitter.js"></script>
