Removed and updated some meta tags.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
+    <meta name="version" content="3">
     <title>This is Zach Jordan</title>
+
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/twitter.css">
@@ -25,20 +26,6 @@
 	<!-- Google Font link -->
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
-	<!-- Twitter Card Meta -->
-    <meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@ThatOtherZac" />
-	<meta name="twitter:title" content="ZachJordan.me" />
-	<meta name="twitter:description" content="A website for your daily dose of Zach. Recommended twice daily." />
-	<meta name="twitter:image" content="https://pbs.twimg.com/profile_banners/468441404/1440028456/1500x500" />
-
-	<!-- Facebook Card Meta -->
-	<meta property="og:url" content="http://www.zachjordan.me" />
-	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Zach - Human" />
-	<meta property="og:description" content="A website for your daily dose of Zach. Recommended twice daily." />
-	<meta property="og:image" content="https://pbs.twimg.com/profile_banners/468441404/1440028456/1500x500" />
 
 </head>
 <body>
