Small errors edited.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
     <meta name="author" content="Zach Jordan">
-    <meta name="version" content="3">
     <title>This is Zach Jordan</title>
 
     <!-- Favicon -->
@@ -266,7 +265,7 @@
 						<h1 class="title">About Zach</h1>
 						<img class="blog-img" src="img/about-zach.jpg" title="This is Zach in SFO" alt="About Zach Image">
 						<div class="blog-content">
-							<center><h2 class="title">~ The Cake Was a Lie ~</h2></center>
+							<h2 class="title" style="text-align: center">~ The Cake Was a Lie ~</h2>
 							<div class="dropcap">But</div>
 							<div class="detail">
 								<p>while you're here you might as well get to know me a little better. For starters my passion for all things digital has allowed me to diversify my copywriting and marketing skills to cater specifically to the online world. I love to find creative solutions to problems whether it be a catchy headline or what content to use for a landing page.</p>
@@ -310,7 +309,7 @@
 							<!-- begin #blog-item -->
 							<div class="col-md-5">
 								<div class="blog-item">
-									<a class="overlay" traget="_blank" href="https://medium.com/toronto-ontario/a-letter-of-love-to-the-srt-379cc191bd5c#.w78wi8pdc" title="Read A Love Letter to The SRT">
+									<a class="overlay" target="_blank" href="https://medium.com/toronto-ontario/a-letter-of-love-to-the-srt-379cc191bd5c#.w78wi8pdc" title="Read A Love Letter to The SRT">
 										<h1>Read It</h1>
 									</a>
 									<img src="img/blog/1.jpg" title="Read A Love Letter to The SRT" alt="A Love Letter to The SRT Thumbnail">
