Proper center tag added to h2 in About section.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<h1 class="title">About Zach</h1>
 						<img class="blog-img" src="img/about-zach.jpg" title="This is Zach in SFO" alt="About Zach Image">
 						<div class="blog-content">
-							<h2 class="title" style="text-align: center">~ The Cake Was a Lie ~</h2>
+							<h2 class="title" align="center">~ The Cake Was a Lie ~</h2>
 							<div class="dropcap">But</div>
 							<div class="detail">
 								<p>while you're here you might as well get to know me a little better. For starters my passion for all things digital has allowed me to diversify my copywriting and marketing skills to cater specifically to the online world. I love to find creative solutions to problems whether it be a catchy headline or what content to use for a landing page.</p>
