Hack fix added for close "X" where instead of directed to #top-SECTION they re-load the index.html. Not an elegant solution, but it'll do for now.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="main-content-profile">
 				<div class="close-icon-container">
-					<a href="#top-profile" class="close-icon expand-profile"></a>
+					<a href="index.html" class="close-icon expand-profile"></a>
 				</div>
 				<div class="summary">
 					<img class="big-image" src="img/profile-picture.jpg" title="This is Zach" alt="Profile Picture of Zach">
@@ -88,7 +88,7 @@
 					<div class="icon icon-left fa fa-file-text-o"></div>
 				</div>
 				<div class="main-content">
-					<a href="#top-resume" class="close-icon expand"></a>
+					<a href="index.html" class="close-icon expand"></a>
 					<h1 class="title">My Resume</h1>
 					<div class="row">
 						<div class="col-md-6">
@@ -260,7 +260,7 @@
 					<div class="icon icon-left fa fa-child"></div>
 				</div>
 				<div class="main-content">
-					<a href="#top-portfolio" class="close-icon expand"></a>
+					<a href="index.html" class="close-icon expand"></a>
 					<div class="col-md-12">
 						<h1 class="title">About Zach</h1>
 						<img class="blog-img" src="img/about-zach.jpg" title="This is Zach in SFO" alt="About Zach Image">
@@ -301,7 +301,7 @@
 					<div class="icon icon-left fa fa-pencil"></div>
 				</div>
 				<div class="main-content">
-					<a href="#top-blog" class="close-icon expand"></a>
+					<a href="index.html" class="close-icon expand"></a>
 					<h1 class="title">Latest Blog Posts</h1>
 					<div class="blog-row row">
 						<div id="blog-list-container" class="col-md-12">
@@ -407,7 +407,7 @@
 					<div class="icon icon-left fa fa-envelope-o"></div>
 				</div>
 				<div class="main-content">
-					<a href="#top-contact" class="close-icon expand"></a>
+					<a href="index.html" class="close-icon expand"></a>
 					<h1 class="title">Get In Touch</h1>
 					<div class="row">
 						<div class="col-md-6">
