Many more style edits. Mobile should be fine now, looks responsive working 100% (I hope). Copy edits in the About Section.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="main-content-profile">
 				<div class="close-icon-container">
-					<a href="index.html" class="close-icon expand-profile"></a>
+					<a href="#top-profile" class="close-icon expand-profile"></a>
 				</div>
 				<div class="summary">
 					<img class="big-image" src="img/profile-picture.jpg" title="This is Zach" alt="Profile Picture of Zach">
@@ -64,6 +64,7 @@
 						<span class="fa fa-download"></span>
 					</a>
 				</div>
+				<br />
 				<div class="social-container">
 					<ul class="social">
 						<li><a href="https://www.instagram.com/thatotherzach/" target="_blank" title="Insta Zach" class="fa fa-instagram"></a></li>
@@ -140,25 +141,8 @@
 									</div>
 								</div>
 							</div>
-							<!-- end #timeline -->
-
-							<h2 class="title">Education</h2>
-							<!-- begin #education -->
-							<div class="timeline-item">
-								<div class="briefcase fa fa-graduation-cap"></div>
-								<div class="job">
-									<h2 class="job-title">Advertising &amp; Marketing Communications<br><span>Advanced Diploma - Centennial College</span></h2>
-									<h3 class="year">Graduated April 2014</h3>
-									<br>
-									<ul>
-										<li>Worked in Centennial’s student run advertising agency TILT</li>
-										<li>Won an award for outstanding copywriting abilities from Zulu Alpha Kilo.</li>
-										<li>Attended Advertising Week 2013 in New York City.</li>
-									</ul>
-								</div>
-							</div>
 							<hr class="hidden-md hidden-lg">
-							<!-- end #education -->
+							<!-- end #timeline -->
 						</div>
 						<div class="col-md-5">
 						<!-- begin #testimonials
@@ -244,6 +228,22 @@
 								</div>
 							</div>
 							<!-- end #skills -->
+							<h2 class="title">Education</h2>
+							<!-- begin #education -->
+							<div class="timeline-item">
+								<div class="briefcase fa fa-graduation-cap"></div>
+								<div class="job">
+									<h2 class="job-title">Advertising &amp; Marketing Communications<br><span>Advanced Diploma - Centennial College</span></h2>
+									<h3 class="year">Graduated April 2014</h3>
+									<br>
+									<ul>
+										<li>Worked in Centennial’s student run advertising agency TILT</li>
+										<li>Won an award for outstanding copywriting abilities from Zulu Alpha Kilo.</li>
+										<li>Attended Advertising Week 2013 in New York City.</li>
+									</ul>
+								</div>
+							</div>
+							<!-- end #education -->
 						</div>
 					</div>
 				</div>
