Added custom browser window colors for platforms that support it.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
+	<!-- Chrome, Firefox OS, Opera and Vivaldi Browser Colors -->
+	<meta name="theme-color" content="#0099d5">
+
+	<!-- Windows Phone Browser Color -->
+	<meta name="msapplication-navbutton-color" content="#0099d5">
+
+	<!-- iOS Safari Browser Color -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#0099d5">
+
 </head>
 <body>
 
