Added social card meta for Facebook and Twitter.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Zach is a digital marketer and copywriter living in Toronto. This is his electronic profile and other fun stuff.">
+    <meta name="description" content="Zach is a digital specialist and copywriter living in Toronto. Go here for his life story.">
     <meta name="author" content="Zach Jordan">
     <title>This is Zach Jordan</title>
 
@@ -25,6 +25,16 @@
 	<!-- Google Font link -->
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+	<!-- Facebook Status Card Image --> 
+	<link rel="image_src" href="img/about-zach.jpg">
+
+	<!-- Twitter Summary Card --> 
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@ThatOtherZac">
+	<meta name="twitter:title" content="This is Zach Jordan">
+	<meta name="twitter:description" content="Zach is a digital specialist and copywriter living in Toronto.">
+	<meta name="twitter:image" content="img/about-zach.jpg">
 
 	<!-- Chrome, Firefox OS, Opera and Vivaldi Browser Colors -->
 	<meta name="theme-color" content="#0099d5">
