--- a/index.html
+++ b/index.html
@@ -475,6 +475,8 @@
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-75809241-1', 'auto');
+	  ga('require', 'displayfeatures');
+	  ga('require', 'linkid');
 	  ga('send', 'pageview');
 
 	</script>
