Trying to get images to show up in social meta tags.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 	<!-- Facebook Status Card Image --> 
-	<link rel="image_src" href="img/about-zach.jpg">
+	<link rel="image_src" href="http://zachjordan.me/img/about-zach.jpg">
 
 	<!-- Twitter Summary Card --> 
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@ThatOtherZac">
 	<meta name="twitter:title" content="This is Zach Jordan">
 	<meta name="twitter:description" content="Zach is a digital specialist and copywriter living in Toronto.">
-	<meta name="twitter:image" content="img/about-zach.jpg">
+	<meta name="twitter:image" content="http://zachjordan.me/img/about-zach.jpg">
 
 	<!-- Chrome, Firefox OS, Opera and Vivaldi Browser Colors -->
 	<meta name="theme-color" content="#0099d5">
