Meta status card updates for Facebook and Twitter.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Zach is a digital specialist and copywriter living in Toronto. Go here for his life story.">
+    <meta name="description" content="Zach Jordan is a digital specialist and copywriter living in Toronto. Go here for his life story.">
     <meta name="author" content="Zach Jordan">
-    <title>This is Zach Jordan</title>
+    <title>This is Zach</title>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
@@ -26,14 +26,18 @@
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-	<!-- Facebook Status Card Image --> 
-	<link rel="image_src" href="http://zachjordan.me/img/about-zach.jpg">
+	<!-- Facebook Status Card --> 
+	<meta property="og:url" content="http://zachjordan.me">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="This is Zach">
+	<meta property="og:description" content="Zach Jordan is a digital specialist and copywriter living in Toronto. Go here for his life story.">
+	<meta property="og:image" content="http://zachjordan.me/img/about-zach.jpg">
 
 	<!-- Twitter Summary Card --> 
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@ThatOtherZac">
-	<meta name="twitter:title" content="This is Zach Jordan">
-	<meta name="twitter:description" content="Zach is a digital specialist and copywriter living in Toronto.">
+	<meta name="twitter:title" content="This is Zach">
+	<meta name="twitter:description" content="Zach Jordan is a digital specialist and copywriter living in Toronto. Go here for his life story.">
 	<meta name="twitter:image" content="http://zachjordan.me/img/about-zach.jpg">
 
 	<!-- Chrome, Firefox OS, Opera and Vivaldi Browser Colors -->
