--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<div class="occupation">Digital Marketing Specialist, Copywriter, "Zach" of All Trades</div>
 				</div>
 				<p class="hi">
-					<span class="dropcap">Hi</span><span class="detail"></span>
+					<span class="dropcap">Hi</span><!--<span class="detail">-->APRIL FOOLS! Zach thinks this is funny, the site will be back to normal after 12:00pm EST. In the mean time enjoy Mr. Astley.</span>
 				</p>
 				<div class="button hidden-xs hidden-sm">
 					<a href="docs/ZJ-WebResume-2016.pdf" class="download">Download Resume &nbsp;
@@ -102,6 +102,9 @@
 
 		<!-- begin #features -->
 		<div id="features">
+
+		<!-- ApRiL FoOlS 2016 -->
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DLzxrzFCyOs?autoplay=1" frameborder="0" allowfullscreen></iframe>
 
 			<!-- begin #resume -->
 			<div id="resume" class="absolute">
