A special addition for a special day. To be removed at 12:00pm EST later today.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 					<div class="occupation">Digital Marketing Specialist, Copywriter, "Zach" of All Trades</div>
 				</div>
 				<p class="hi">
-					<span class="dropcap">Hi</span><!--<span class="detail">-->APRIL FOOLS! Zach thinks this is funny, the site will be back to normal after 12:00pm EST. In the mean time enjoy Mr. Astley.</span>
+					<!-- ApRiL FoOlS 2016 -->
+					<span class="dropcap">Hi</span><!--<span class="detail">-->&amp; APRIL FOOLS! (Zach thinks this is funny.)<br /><br />The website will be back to normal after 12:00pm EST on April 1st. Scroll down to view more about me... or just enjoy Mr. Astley.<br /><br /><i class="fa fa-heart"></i> Zach</span>
 				</p>
 				<div class="button hidden-xs hidden-sm">
 					<a href="docs/ZJ-WebResume-2016.pdf" class="download">Download Resume &nbsp;
