--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 					<div class="occupation">Digital Marketing Specialist, Copywriter, "Zach" of All Trades</div>
 				</div>
 				<p class="hi">
-					<!-- ApRiL FoOlS 2016 -->
-					<span class="dropcap">Hi</span><!--<span class="detail">-->&amp; APRIL FOOLS! (Zach thinks this is funny.)<br /><br />The website will be back to normal after 12:00pm EST on April 1st. Scroll down to view more about me... or just enjoy Mr. Astley.<br /><br /><i class="fa fa-heart"></i> Zach</span>
+					<span class="dropcap">Hi</span><span class="detail"></span>
 				</p>
 				<div class="button hidden-xs hidden-sm">
 					<a href="docs/ZJ-WebResume-2016.pdf" class="download">Download Resume &nbsp;
@@ -104,8 +103,7 @@
 		<!-- begin #features -->
 		<div id="features">
 
-		<!-- ApRiL FoOlS 2016 -->
-		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DLzxrzFCyOs?autoplay=1" frameborder="0" allowfullscreen></iframe>
+		<!-- A secret iframe :O <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DLzxrzFCyOs?autoplay=1" frameborder="0" allowfullscreen></iframe>-->
 
 			<!-- begin #resume -->
 			<div id="resume" class="absolute">
