Quicky Style Shim
Will update css file later, quick fix for the experience section as per the issue.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<a href="#top-resume" class="close-icon expand"></a>
 					<h1 class="title">My Resume</h1>
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-6" style="height:450px;">
 							<h2 class="title">+3.5 Years of Experience</h2>
 							<!-- begin #timeline -->
 							<div class="button hidden-md hidden-lg">
