--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<a href="#top-resume" class="close-icon expand"></a>
 					<h1 class="title">My Resume</h1>
 					<div class="row">
-						<div class="col-md-6" style="height:450px;">
+						<div class="col-md-6">
 							<h2 class="title">+3.5 Years of Experience</h2>
 							<!-- begin #timeline -->
 							<div class="button hidden-md hidden-lg">
@@ -124,7 +124,7 @@
 									<span class="fa fa-download"></span>
 								</a>
 							</div>
-							<div id="timeline" class="hidden-xs hidden-sm">
+							<div id="timeline" style="height:450px;" class="hidden-xs hidden-sm">
 								<div class="timeline-item">
 									<div class="briefcase fa fa-briefcase"></div>
 									<div class="job">
