Removing previous style edit
Did more harm than good. Will look into adding this later.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<span class="fa fa-download"></span>
 								</a>
 							</div>
-							<div id="timeline" style="height:450px;" class="hidden-xs hidden-sm">
+							<div id="timeline" class="hidden-xs hidden-sm">
 								<div class="timeline-item">
 									<div class="briefcase fa fa-briefcase"></div>
 									<div class="job">
