--- a/index.html
+++ b/index.html
@@ -480,15 +480,24 @@
 
 	  ga('create', 'UA-75809241-1', 'auto');
 	  ga('require', 'displayfeatures');
-	  ga('set', '&linkid', 'download-resume');
+	  ga('require', 'linkid');
 	  ga('set', '&linkid', 'resume');
 	  ga('set', '&linkid', 'portfolio');
 	  ga('set', '&linkid', 'blog');
 	  ga('set', '&linkid', 'contact');
-	  ga('require', 'linkid');
 	  ga('send', 'pageview');
 
 	</script>
+
+	<!-- Google Tag Manager -->
+	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MWJ4H5"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MWJ4H5');</script>
+	<!-- End Google Tag Manager -->
 
 	<!-- JavaScript Files -->
 	<script src="js/jquery.min.js"></script>
