Added new Esperanto post to the blog area. Replaces the old one.

--- a/index.html
+++ b/index.html
@@ -371,20 +371,20 @@
 							<!-- begin #blog-item -->
 							<div class="col-md-5">
 								<div class="blog-item">
-									<a class="overlay" target="_blank" href="https://medium.com/kvindek-du-semajnoj-de-esperanton/52se-kiu-estas-vi-iros-nomi-715acfea2189#.rtuj77s2y" title="Legas Kiu Estas Vi Iros Nomi">
+									<a class="overlay" target="_blank" href="https://medium.com/kvindek-du-semajnoj-de-esperanton" title="Legas Kvindek Du Semajnoj De Esperanto">
 										<h1>Read It</h1>
 									</a>
 									<img src="img/blog/3.jpg" title="Legas Kiu Estas Vi Iros Nomi" alt="Kiu Estas Vi Iros Nomi Thumbnail">
 									<div class="detail row">
 										<div class="date">
-											<span>20</span>
-											<span>Mar</span>
+											<span>14</span>
+											<span>Feb</span>
 										</div>
 										<div class="like">
 											<span class="fa fa-heart"></span>
 											<span>0</span>
 										</div>
-										<div class="blog-title">Kiu Estas Vi Iros Nomi<br>- Esperanto Post -</div>
+										<div class="blog-title">Kvindek Du Semajnoj de Esperanto</div>
 									</div>
 								</div>
 							</div>
